Parche Pre-optimización Meeple Factory

--- a/src/app/comun/configuracion/configuracion.component.html
+++ b/src/app/comun/configuracion/configuracion.component.html
@@ -35,7 +35,7 @@
       <botonComponent mat-button [mat-dialog-close]="'Developer Tool'" [texto]="'Developer Tool'" [tipoBoton]="2" [color]="'naranja'" class="boton Arial"></botonComponent>
     </div>
     <div class="opcion">
-      <botonComponent mat-button [mat-dialog-close]="'MultiControl'" [texto]="'MultiControl'" [tipoBoton]="2" [color]="'naranja'" class="boton Arial"></botonComponent>
+      <botonComponent mat-button [mat-dialog-close]="'Saltar Tutorial'" [texto]="'Saltar Tutorial'" [tipoBoton]="2" [color]="'naranja'" class="boton Arial"></botonComponent>
     </div>
     <div class="opcion">
       <botonComponent mat-button [mat-dialog-close]="'Data Sync'" [texto]="'Data Sync'" [tipoBoton]="2" [color]="'naranja'" class="boton Arial"></botonComponent>
