--- a/src/app/comun/mapa-general/mapaGeneral.component.sass
+++ b/src/app/comun/mapa-general/mapaGeneral.component.sass
@@ -279,6 +279,18 @@
         &.sur
           bottom: -25px
           rotate: -90deg
+      .hitboxFlecha
+        position: absolute
+        height: 50px
+        width: 50px
+        &.oeste
+          left: -50px
+        &.norte
+          top: -50px
+        &.este
+          right: -50px
+        &.sur
+          bottom: -50px
 
   .warning
      position: absolute
