--- a/src/app/comun/panel-general/panel-general.component.html
+++ b/src/app/comun/panel-general/panel-general.component.html
@@ -32,7 +32,8 @@
 
 	<div class="framePanelGeneral"></div>
 
+  <div id="tiraDesplegable" (click)="toggleDesplegado()" [ngClass]="{'desplegado': desplegado}">  MENÚ | MENÚ | MENÚ </div>
+
 </div>
 
-<div id="tiraDesplegable" (click)="toggleDesplegado()" [ngClass]="{'desplegado': desplegado}">  MENU | MENU | MENU </div>
 
