--- a/src/app/comun/heroe/heroe.component.html
+++ b/src/app/comun/heroe/heroe.component.html
@@ -10,6 +10,7 @@
 
     <div [ngClass]="renderizarObjetivoHeroe()"></div>
 
+
     @if (renderHeroe.vida==0 && !renderHeroe.controlEnemigos) {
       <div class="frameAnimacionesFrame">
         <img class="spriteFuego shaderAbatido" src="../../../assets/Efectos/35.png"/>
@@ -20,13 +21,11 @@
       <img class="imagenAbatido" src="../../../assets/ui/icons/Icon_01.png"/>
     }
 
-    <!--
-    @if (renderHeroe.turno) {
+    @if (renderHeroe.turno && pantalla=='inMap') {
       <div class="frameAnimacionesFrame">
         <img class="spriteElectrico" src="../../../assets/Efectos/37.png"/>
       </div>
     }
-    -->
 
     @if (renderHeroe.controlEnemigos) {
       <div class="frameAnimacionesFrame">
@@ -63,9 +62,11 @@
       <img class="frameNivel Texto1" src="../../../assets/Frames/Frame-Heroe-Circulo.png"/>
     </div>
 
+    @if(animacionesHabilitadas){
     <appAnimacionEfecto #animacionEfecto [loop]="false" [animacion]="renderHeroe.animacion" [mostrarAnimacion]="renderHeroe.mostrarAnimacion"></appAnimacionEfecto>
 
     <appAnimacionNumero #animacionNumero [enemigo]="renderHeroe" [enemigoVida]="renderHeroe.puntosVida"></appAnimacionNumero>
+    }
 
   </div>
 
